eww: fix spacing

--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -8,8 +8,9 @@
   border-radius: 20px;
 }
 
-.cpbutton {
-  margin: 10px;
+.control-panel-button {
+  margin-left: 20px;
+  margin-right: 20px;
 }
 
 .timespace {
@@ -27,8 +28,8 @@
   margin-right: 0px;
 }
 
-.controlpanelbutton {
-  margin-left: 100px;
+.bar-spacing {
+  min-width: 100px;
 }
 
 .systeminfo slider {
